--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </video>
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">Codewithshobhit</a>
+            <a href="#" class="logo">Fazal</a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
