--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="container">
             <a href="#" class="logo">Fazal</a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="https://t.me/infamous_hydra">Powered By</a></li>
+                <li><a href="hmm">Services</a></li>
+                <li><a href="#">Websites</a></li>
                 <li><a href="#">Plans</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://t.me/fazal000001">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -30,7 +30,7 @@
         <div class="page-content">
             <div class="inner-content">
                 <h1 class="heading">Sukuna</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ullam, aliquid in vel quo eius possimus magni quibusdam ex perferendis, natus suscipit voluptas, debitis unde vitae omnis saepe ratione ea?</p>
+                <p>I am Mohammed Fazal who Tamed a title SUKUNA, An Electrical Engineerng Student with some hobbies Like Coading And Creating New Thnigs</p>
                 <div class="buttons">
                     <a href="#" class="active">Learn more</a>
                     <a href="#">Browse</a>
@@ -38,9 +38,8 @@
 
                 <div class="social-links">
                     <a href="#" class="bi bi-facebook" ></a>
-                    <a href="#" class="bi bi-youtube" ></a>
+                    <a href="https://t.me/Fazal000001" class="bi bi-Telegram" ></a>
                     <a href="#" class="bi bi-instagram" ></a>
-                    <a href="#" class="bi bi-linkedin" ></a>
                 </div>
             </div>
         </div>
