--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <div class="social-links">
                     <a href="#" class="bi bi-facebook" ></a>
-                    <a href="https://t.me/Fazal000001" class="bi bi-Telegram" ></a>
+                    <a href="https://t.me/Fazal000001" class="bi bi-telegram" ></a>
                     <a href="#" class="bi bi-instagram" ></a>
                 </div>
             </div>
